abandoned tailwind, working with sass

--- a/WebTech-Frontend/src/app/map/map.component.html
+++ b/WebTech-Frontend/src/app/map/map.component.html
@@ -5,5 +5,5 @@
         }
     </div>
 
-    <button (click)="resetPosition()">Reset position</button>
+    <button type="button" (click)="resetPosition()">Reset position</button>
 </div>
