--- a/WebTech-Frontend/src/app/upload/upload.component.html
+++ b/WebTech-Frontend/src/app/upload/upload.component.html
@@ -8,14 +8,14 @@
   
     <div>
       <label for="title" class="upload-label">Title</label>
-      <input type="text" formControlName="title" id="title" class="title-input" placeholder="Enter the title"
+      <input type="text" formControlName="title" id="title" class="title-input" placeholder="Enter title"
         required="">
     </div>
   
     <div>
       <label for="descr" class="upload-label">Description</label>
       <textarea formControlName="description" id="descr" class="descr-input"
-        placeholder="Enter the photo description..."></textarea>
+        placeholder="Enter photo description..."></textarea>
     </div>
   
     <div>
@@ -25,6 +25,7 @@
     </div>
   
     <div>
+      <label for="file" class="upload-label">Photo</label>
       <input type="file" formControlName="image" id="file" class="file-input" accept="image/*" required="">
     </div>
   
