--- a/WebTech-Frontend/src/app/auth/auth-form/authForm.component.scss
+++ b/WebTech-Frontend/src/app/auth/auth-form/authForm.component.scss
@@ -1,38 +1,28 @@
+@use '../../../styles' as *;
+
 section.auth-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    @include flexColumn();
 
     h1.auth-title {
-        color: white;
-        font-size: 2.25rem;
-        font-weight: bold;
-        margin-bottom: 2.5rem;
+        @include formTitle();
     }
 
     form.auth-form {
         flex-grow: 1;
         padding: 1rem;
-        background-color: #2d3748;
+        background-color: $form-bg-color;
         border: 1px solid;
         border-radius: 0.5rem;
 
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        @include flexColumn();
 
 
         div {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            @include flexColumn();
 
             label.auth-label {
                 font-size: 1.125rem;
-                font-weight: 600;
+                font-weight: $semibold;
                 color: whitesmoke;
                 margin-bottom: 0.5rem;
             }
@@ -63,7 +53,6 @@ section.auth-section {
             padding: 0.5rem;
             border-radius: 0.375rem;
             background-color: teal;
-            // transition: background-color 0.2s ease;
 
             &:hover {
                 background-color: #115e59;
