--- a/WebTech-Frontend/src/app/homepage/homepage.component.scss
+++ b/WebTech-Frontend/src/app/homepage/homepage.component.scss
@@ -1,11 +1,9 @@
+@use '../../styles' as *;
+
 section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    @include flexColumn();
 
     div.hero {
-        flex: 1 1 0%;
         text-align: center;
         color: white;
         font-weight: bold;
