--- a/WebTech-Frontend/src/app/upload/upload.component.scss
+++ b/WebTech-Frontend/src/app/upload/upload.component.scss
@@ -29,7 +29,7 @@ section.upload-section {
                 color: whitesmoke;
             }
 
-            input.title-input, textarea.descr-input, input.file-input {
+            input, textarea {
                 width: 100%;
                 background-color: whitesmoke;
                 border: 2px solid darkgray;
