moved layers to mapState service

--- a/WebTech-Frontend/src/app/map/map.component.html
+++ b/WebTech-Frontend/src/app/map/map.component.html
@@ -1,7 +1,7 @@
 <div class="map-container">
     <div  class="leaflet"  leaflet [leafletOptions]="options" (leafletMapReady)="onMapReady($event)">
         @if (showCatMarkers){
-            <div [leafletLayers]="layers"></div>
+            <div [leafletLayers]="mapState.layers"></div>
         }
     </div>
 
