--- a/WebTech-Frontend/src/app/upload/upload.component.html
+++ b/WebTech-Frontend/src/app/upload/upload.component.html
@@ -6,10 +6,10 @@
   
   <form class="upload-form" [formGroup]="uploadForm" (ngSubmit)="onSubmit()">
 
-    <div>
+    <!-- <div>
       <label for="cat" class="upload-label">Cat name</label>
       <input type="text" formControlName="cat" id="cat" class="cat-input" placeholder="Enter cat name" required="">
-    </div>
+    </div> -->
   
     <div>
       <label for="title" class="upload-label">Title</label>
