--- a/WebTech-Frontend/src/app/cats/cats.component.html
+++ b/WebTech-Frontend/src/app/cats/cats.component.html
@@ -2,6 +2,8 @@
     @for (cat of catsState.cats(); track cat){
         <li>
             <h1>{{cat.name}}</h1>
+            <a href="{{catPhotosUrls.get(cat.id)}}">{{catPhotosUrls.get(cat.id)}}</a>
+            <img [src]="catPhotosUrls.get(cat.id)" alt="{{cat.name}}" />
         </li>
     }
 </ul>
