--- a/WebTech-Frontend/src/app/cats/cats.component.scss
+++ b/WebTech-Frontend/src/app/cats/cats.component.scss
@@ -5,20 +5,25 @@ ul {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: 5rem;
     padding: 10rem;
 
     li {
-        border: 1px solid;
-        border-radius: 4rem;
+        flex: 0 1 20vw;
+        height: 25vw;
+        min-height: 10vw;
+        border: 1px;
+        border-radius: 0.5rem;
         padding: 0.5rem;
-        background-color: $form-bg-color;
-        width: auto;
-        height: auto;
+        // background-color: $form-bg-color;
+        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         overflow: hidden;
-        @include flexColumn();
         
         h1 {
+            flex: 0 0 auto;
             color: white;
             font-size: 2rem;
             font-weight: bold;
@@ -26,9 +31,11 @@ ul {
             
         }
         img {
+            flex: 1 1 auto;
             border: 1px;
             border-radius: 0.5rem;
-            max-height: 30rem;
+            max-height: 20vw;
+            min-height: 10vw;
         }
     }
 }
