--- a/WebTech-Frontend/src/app/cats/cats.component.scss
+++ b/WebTech-Frontend/src/app/cats/cats.component.scss
@@ -1,41 +1,89 @@
 @use '../../styles' as *;
 
-ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 5rem;
-    padding: 10rem;
+section.cats-section {
+    @include flexColumn();
 
-    li {
-        flex: 0 1 20vw;
-        height: 25vw;
-        min-height: 10vw;
-        border: 1px;
-        border-radius: 0.5rem;
-        padding: 0.5rem;
-        // background-color: $form-bg-color;
-        
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        overflow: hidden;
-        
-        h1 {
-            flex: 0 0 auto;
-            color: white;
-            font-size: 2rem;
-            font-weight: bold;
-            text-align: center;
-            
+    h1.title {
+        @include formTitle();
+    }
+
+    form.upload-cat-form {
+        @include flexColumn();
+
+        div {
+            display: flex;
+            justify-content: stretch;
+            align-items: stretch;
+            margin-bottom: 1rem;
+
+            label {
+                font-size: 1.5rem;
+                font-weight: $semibold;
+                color: whitesmoke;
+            }
+
+            input {
+                width: 100%;
+                background-color: whitesmoke;
+                border: 2px solid darkgray;
+                border-radius: 0.5rem;
+                color: black;
+            }
         }
-        img {
-            flex: 1 1 auto;
+
+        button {
+            color: whitesmoke;
+            font-weight: bold;
+            background-color: teal;
+            padding: 0.5rem;
+            border: none;
+            border-radius: 0.5rem;
+            max-height: 3rem;
+
+            &:hover {
+                background-color: $button-hover-bg-color;
+            }
+        }
+    }
+
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 5rem;
+        padding: 10rem;
+
+        li {
+            flex: 0 1 20vw;
+            height: 25vw;
+            min-height: 10vw;
             border: 1px;
             border-radius: 0.5rem;
-            max-height: 20vw;
-            min-height: 10vw;
+            padding: 0.5rem;
+            // background-color: $form-bg-color;
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            overflow: hidden;
+
+            h1 {
+                flex: 0 0 auto;
+                color: white;
+                font-size: 2rem;
+                font-weight: bold;
+                text-align: center;
+
+            }
+
+            img {
+                flex: 1 1 auto;
+                border: 1px;
+                border-radius: 0.5rem;
+                max-height: 20vw;
+                min-height: 10vw;
+            }
         }
     }
 }
