fixed error in cats-state and auto updates in cats component

--- a/WebTech-Frontend/src/app/upload/upload.component.html
+++ b/WebTech-Frontend/src/app/upload/upload.component.html
@@ -7,7 +7,7 @@
   <form class="upload-form" [formGroup]="uploadForm" (ngSubmit)="onSubmit()">
 
     <div>
-      <h2>{{cat_name()}}</h2>
+      <h2>Upload photo of {{cat_name()}}</h2>
     </div>
 
     <div>
