--- a/WebTech-Frontend/src/app/upload/upload.component.html
+++ b/WebTech-Frontend/src/app/upload/upload.component.html
@@ -15,10 +15,10 @@
       <input type="text" formControlName="title" id="title" class="title-input" placeholder="Enter title" required="">
     </div>
 
-    <div>
+    <div class="descr-container">
       <label for="descr" class="upload-label">Description</label>
-      <textarea formControlName="description" id="descr" class="descr-input"
-        placeholder="Enter photo description..."></textarea>
+      <quill-editor formControlName="description" id="descr" class="descr-input"
+        placeholder="Enter photo description..."></quill-editor>
     </div>
 
     <div>
