--- a/WebTech-Frontend/src/app/upload/upload.component.scss
+++ b/WebTech-Frontend/src/app/upload/upload.component.scss
@@ -37,7 +37,7 @@ section.upload-section {
             }
 
             input,
-            textarea {
+            quill-editor {
                 width: 100%;
                 background-color: whitesmoke;
                 border: 2px solid darkgray;
