--- a/WebTech-Frontend/src/app/cats/cats.component.html
+++ b/WebTech-Frontend/src/app/cats/cats.component.html
@@ -14,7 +14,7 @@
         @for (cat of catsState.cats(); track cat){
         <li>
             <h1>{{cat.name}}</h1>
-            <a href="/cats/{{cat.id}}">
+            <a [routerLink]="['/cats', cat.id]">
                 <img [src]="getCatProfilePicUrl(cat.id)" alt="{{cat.name}}" loading="lazy" />
             </a>
         </li>
