--- a/WebTech-Frontend/src/app/cats/cats.component.scss
+++ b/WebTech-Frontend/src/app/cats/cats.component.scss
@@ -56,18 +56,15 @@ section.cats-section {
 
         li {
             flex: 0 1 20vw;
-            // height: 25vw;
-            // min-height: 10vw;
             border: 1px;
             border-radius: 0.5rem;
             padding: 0.5rem;
-            // background-color: $form-bg-color;
+            background-color: $form-bg-color;
             overflow: hidden;
 
             display: flex;
             flex-direction: column;
             align-items: center;
-            overflow: hidden;
 
             h1 {
                 flex: 0 0 auto;
@@ -82,8 +79,6 @@ section.cats-section {
                 flex: 1 1 auto;
                 border: 1px;
                 border-radius: 0.5rem;
-                // max-height: 20vw;
-                // min-height: 10vw;
             }
         }
     }
