working with geolocation

--- a/WebTech-Frontend/src/app/homepage/homepage.component.html
+++ b/WebTech-Frontend/src/app/homepage/homepage.component.html
@@ -5,5 +5,5 @@
       Find cats in your area!
     </h2>
   </div>
-  <app-map class="map-component"></app-map>
+  <app-map class="map-component" [showCatMarkers]="true"></app-map>
 </section>
