--- a/WebTech-Frontend/src/app/map/map.component.html
+++ b/WebTech-Frontend/src/app/map/map.component.html
@@ -1,7 +1,10 @@
 <div class="map-container">
-    <div  class="leaflet"  leaflet [leafletOptions]="options" (leafletMapReady)="onMapReady($event)">
+    <div class="leaflet" leaflet [leafletOptions]="options" (leafletMapReady)="onMapReady($event)">
         @if (showCatMarkers){
-            <div [leafletLayers]="mapState.layers"></div>
+        <div [leafletLayers]="mapState.layers"></div>
+        }
+        @else {
+        <div [leafletLayers]="mapState.userMarkerLayer"></div>
         }
     </div>
 
