--- a/WebTech-Frontend/src/app/cat-details/cat-details.component.html
+++ b/WebTech-Frontend/src/app/cat-details/cat-details.component.html
@@ -4,8 +4,10 @@
         @for (photo of photos(); track photo){
         <li>
             <h2>{{photo.title}}</h2>
-            <quill-view [content]="getDescription(photo)"></quill-view>
-            <img [src]="photosUrls.get(photo.id)" loading="lazy" />
+            <div>
+                <img [src]="photosUrls.get(photo.id)" loading="lazy" />
+                <quill-view [content]="getDescription(photo)"></quill-view>
+            </div>
         </li>
         }
     </ul>
