--- a/WebTech-Frontend/src/app/cats/cats.component.scss
+++ b/WebTech-Frontend/src/app/cats/cats.component.scss
@@ -48,9 +48,8 @@ section.cats-section {
 
     ul {
         display: flex;
-        flex-wrap: wrap;
         justify-content: center;
-        align-items: center;
+        align-items: stretch;
         gap: 2rem;
         padding: 5rem;
 
@@ -64,7 +63,6 @@ section.cats-section {
 
             display: flex;
             flex-direction: column;
-            align-items: center;
 
             h1 {
                 flex: 0 0 auto;
