--- a/WebTech-Frontend/src/app/cats/cats.component.html
+++ b/WebTech-Frontend/src/app/cats/cats.component.html
@@ -3,7 +3,6 @@
     @if (authState.isAuthenticated()){
     <form class="upload-cat-form" [formGroup]="uploadCatForm" (ngSubmit)="onSubmit()">
         <div>
-            <!-- <label for="name">Name</label> -->
             <input type="text" formControlName="name" id="name" placeholder="Enter cat name" required />
         </div>
         <button type="submit">Upload New Cat</button>
@@ -11,12 +10,11 @@
     }
 
     <ul>
-        @for (cat of catsState.cats(); track cat){
+        @for (cat of cats(); track cat){
         <li>
             <h1>{{cat.name}}</h1>
             <a [routerLink]="['/cats', cat.id]">
-                <img [src]="catsState.catProfilePics().get(cat.id)" alt="{{cat.name}}" />
-                <p>{{catsState.catProfilePics().get(cat.id)}}</p>
+                <img [src]="getProfilePictureUrl(cat)" alt="{{cat.name}}" />
             </a>
         </li>
         }
